backend_modules/routetable_private.tf
# Private Route Table configuration

resource "aws_route_table" "private-route-table" {
    vpc_id = "aws_vpc.fdm-vpc.id"

    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = "aws_nat_gateway.nat_1.id"
    }

    tags = {
        Name = "private-route-table"
    }
  
}

# Route Assoc. for App tier

resource "aws_route_table_association" "nat_route_1" {
    subnet_id = "aws_subnet.private-app-subnet-1.id"
    route_table_id = "aws_route_table.private-route-table.id"
  
}

resource "aws_route_table_association" "nat_route_2" {
    subnet_id = "aws_subnet.private-app-subnet-2.id"
    route_table_id = "aws_route_table.private-route-table.id"
  
}

# Route Assoc. for DB tier

resource "aws_route_table_association" "nat_route_db_1" {
    subnet_id = "aws_subnet.private-db-subnet-1.id"
    route_table_id = "aws_route_table.private-route-table.id"
}

resource "aws_route_table_association" "nat_route_db_2" {
    subnet_id = "aws_subnet.private-db-subnet-2.id"
    route_table_id = "aws_route_table.private-route-table.id"
}
